[WGSL] shader,execution,expression,call,builtin,extractBits:* is failing https://bugs.webkit.org/show_bug.cgi?id=267337 rdar://120783982

Reviewed by Mike Wyrzykowski.

The runtime version of extractBits was failing because we directly generated
calls to Metal's extract_bits. Intead we need small wrapper function in order
to clamp the offset and count.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::usesExtractBits const):
(WGSL::ShaderModule::setUsesExtractBits):

Canonical link: https://commits.webkit.org/272897@main